# tchisla-solver

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: expression.rs  lib.rs  main.rs  number.rs  number_theory.rs  progressive_solver.rs  quadratic.rs  rational.rs  reusable_solver.rs  wasm.rs
src/quadratic/: integral.rs  mod.rs  rational.rs
src/solver/: base.rs  binary_operation.rs  integral.rs  mod.rs  progressive.rs  quadratic.rs  range_check.rs  rational.rs  searcher.rs  solver.rs  unary_operation.rs
