[package]
name = "tchisla_solver"
version = "0.1.0"
authors = ["Xuan Yan <xuanyan@xuanyan.ws>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num = "0.3.1"
serde = { version = "1.0.123", features = ["derive"]}
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"] }
