[package]
name = "tchisla_solver"
version = "0.1.0"
authors = ["Xuan Yan <xuanyan@xuanyan.ws>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num = "0.3.1"
opimps = "0.1.1"
rustc-hash = "1.1.0"
serde = { version = "1.0.123", features = ["derive"]}
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
