[package]
name = "tchisla_solver"
version = "0.1.0"
authors = ["Xuan Yan <xuanyan@xuanyan.ws>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num = "0.4.3"
opimps = "0.2.2"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"]}
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
